docs: Add whitepaper PDF, update README link, and modify language configuration for line comments.

--- a/language/language-configuration.json
+++ b/language/language-configuration.json
@@ -1,7 +1,9 @@
 {
     "$schema": "vscode://schemas/language-configuration",
     "comments": {
-        "lineComment": "//",
+        "lineComment": {
+            "comment": "//",
+        },
         "blockComment": ["/*", "*/"]
     },
     "brackets": [
